# sat_sim

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
lib/estacionterrena/: CMakeLists.txt  estacionterrena.cpp  estacionterrena.h
lib/satelite/: CMakeLists.txt  satelite.cpp  satelite.h
lib/sateliteemulator/: client  client.c  sateliteemulator.cpp
lib/task/: CMakeLists.txt  task.cpp  task.h
test/: CMakeLists.txt  test_sat.cpp
